--- a/newIDE/src/App.css
+++ b/newIDE/src/App.css
@@ -1,3 +1,19 @@
+html, body {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex: 1;
+}
+
+.App {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
